# svgr-plugin-swc

./: .gitignore  Cargo.toml  README.md  jest.config.js  package.json  pnpm-lock.yaml  vitest.config.ts
