[workspace]
members = [
  "packages/swc-plugin-transform-svg-component",
  "packages/swc-plugin-add-jsx-attribute",
  "packages/swc-plugin-remove-jsx-attribute",
  "packages/swc-plugin-remove-jsx-empty-expression",
]

[profile.release]
codegen-units = 1
# debug = true
lto = true

# Optimize for size
opt-level = "s"