[workspace]
members = [
  "packages/swc-plugin-transform-svg-component",
  "packages/swc-plugin-add-jsx-attribute",
  "packages/swc-plugin-remove-jsx-attribute",
  "packages/swc-plugin-remove-jsx-empty-expression",
  "packages/swc-plugin-replace-jsx-attribute-value",
  "packages/swc-plugin-svg-dynamic-title",
  "packages/swc-plugin-svg-em-dimensions",
  "packages/swc-plugin-transform-react-native-svg"
]

[profile.release]
codegen-units = 1
# debug = true
lto = true

# Optimize for size
opt-level = "s"

# Strip debug symbols
strip = "symbols"