[workspace]
members = [
  "packages/swc-plugin-svgr",
  "packages/swc-plugin-transform-svg-component",
  "packages/swc-plugin-transform-svg-component/transform",
]

[profile.release]
codegen-units = 1
# debug = true
lto = true

# Optimize for size
opt-level = "s"

# Strip debug symbols
strip = "symbols"